tests/errors/semantic/blocking/IMPORTING_EXISTING_IDENTIFIED.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
numpy = 3

import numpy

x = numpy.ones(3)
